--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ riderModule.iml
 /_ReSharper.Caches/
 /.vs
 /.idea/.idea.AndersenTeam.Assessment.Automation/.idea
+/AndersenTeam.Assessment.Infrastructure/Helpers/BearerTokenConstants.cs
